Fix layout issues with navbar and switch to bootstrap 5.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,6 @@
 
 body {
+    padding-top: 80px;
     width: 100%;
     height: 100%;
 	font-family:  'Arial', Helvetica, sans-serif;
@@ -31,18 +32,20 @@ p {
 }
 
 @media(min-width:768px) {
+    body {
+        padding-top: 100px;
+    }
+
+    .navbar-fixed-top .navbar-brand {
+        padding: 15px 0;
+    }
+
     p {
         margin: 0 0 35px;
         font-size: 20px;
         line-height: 1.6;
     }
-}
 
-.navbar-brand img {
-    height: 30px;
-}
-
-@media(min-width:768px) {
     .navbar-custom {
         padding: 10px 0;
         border-bottom: 0;
@@ -59,6 +62,19 @@ p {
         color: #000;
         background: #fff;
     }
+
+}
+
+.navbar-fixed-top .nav {
+        padding: 15px 0;
+}
+
+.navbar-fixed-top .navbar-brand {
+        padding: 0 15px;
+}
+
+.navbar-brand img {
+    height: 30px;
 }
 
 .Site {
@@ -133,12 +149,6 @@ p {
 
 .content-section {
     padding-top: 100px;
-}
-
-@media(min-width:767px) {
-    .content-section {
-        padding-top: 100px;
-    }
 }
 
 .legal p {
